Fix the icons and spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@
   font-family: 'light';
   font-size: 1.1rem;
   color: #eeeeee;
+  /* border: solid 1px yellow; */
 }
 
 body {
@@ -96,6 +97,7 @@ form > button {
   background-color: transparent;
   cursor: pointer;
   font-family: 'med';
+  font-size: 1rem;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -156,14 +158,19 @@ form > button {
   font-size: 1rem;
 }
 
-.main-icon {
-  background-image: url(https://cdn-icons-png.flaticon.com/512/6421/6421095.png);
-  height: 100%;
+.icon-container {
   grid-column: 1/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.first-icon,
+.secondary-icon {
+  height: 100%;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  text-shadow: 5px 5px 5px;
 }
 .main-weather {
   grid-column: 1/6;
@@ -262,7 +269,7 @@ form > button {
   display: grid;
   justify-content: center;
   align-items: start;
-  grid-template-rows: .75fr .75fr 1.5fr 2fr;
+  grid-template-rows: repeat(2, auto) 45px 1fr;
   text-align: center;
   padding: 7.5px 5px;
   color: white;
@@ -270,11 +277,12 @@ form > button {
 }
 
 .end-date {
+  font-family: 'med';
   font-size: .9rem;
 }
 
 .end-day {
-  font-family: 'med';
+  font-family: 'bold';
   font-size: .9rem;
 }
 
@@ -282,8 +290,10 @@ form > button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: auto;
+  width: 100%;
   height: 100%;
+
+  border-top: solid 10px transparent;
 }
 
 .end-weather {
@@ -298,12 +308,12 @@ form > button {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(auto-fit, auto);
-  gap: 7.5px;
+  gap: 5px;
 }
 
 .side-container {
   display: grid;
-  grid-template-columns: 1fr auto 80px;
+  grid-template-columns: 1fr 45px 85px;
   grid-template-rows: auto 1fr;
   justify-content: center;
   align-items: center;
@@ -311,7 +321,8 @@ form > button {
   background-image: var(--blackish);
   border-radius: 25px 25px 25px 25px;
   color: white;
-  padding: 10px;
+  padding: 7.5px 15px;
+  gap: 2.5px;
 }
 
 .side-city {
@@ -338,7 +349,6 @@ form > button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 45px;
   height: 45px;
 }
 
